--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
   </ol>
   </div>
   			<div class="clearfix">&nbsp;</div>
-			<a href="http://www.baltimorecountymd.gov/News/BaltimoreCountyNow" class="news-feed-read-more">Read More From Baltimore County Now</a>
+			<a href="http://www.baltimorecountymd.gov/News/BaltimoreCountyNow" title="Read more from Baltimore County Now." class="news-feed-read-more">Read More From Baltimore County Now</a>
 		</section>
 		<section class="elected-officials six columns">
 			<section class="county-executive">
@@ -241,10 +241,10 @@
 				</ul>
 				<ul class="county-executive-about-list inline-list">
 					<li class="county-executive-about-list-item">
-						<a href="">Biography</a>
+						<a href="http://www.baltimorecountymd.gov/Agencies/executive/bio.html" title="Learn more about Baltimore County Executive Kevin Kamenetz.">Biography</a>
 					</li>
 					<li class="county-executive-about-list-item">
-						<a href="">Contact</a>
+						<a href="http://www.baltimorecountymd.gov/needtocontact/executive?agencyid=1007" title="Contact the Baltimore County Executive.">Contact</a>
 					</li>
 				</ul>
 			</section>
@@ -274,13 +274,13 @@
 				<h2>Help</h2>
 				<ul class="county-help-list">
 					<li class="county-help-list-item">
-						<a href="">Phone Numbers</a>
+						<a href="http://www.baltimorecountymd.gov/Contact_Us/telephone/helpful_numbers.html" title="Find helpful telephone numbers.">Phone Numbers</a>
 					</li>
 					<li class="county-help-list-item">
-						<a href="">Find a County Service</a>
+						<a href="http://www.baltimorecountymd.gov/imlooking/index.html#all" title="Find a County service.">Find a County Service</a>
 					</li>
 					<li class="county-help-list-item">
-						<a href="">Report a Problem</a>
+						<a href="http://www.baltimorecountymd.gov/iwant/index.html" title="Report a problem.">Report a Problem</a>
 					</li>
 				</ul>
 			</section>
@@ -309,7 +309,7 @@
 				<h2>Awards</h2>
 				<ul class="county-awards-list">
 					<li class="county-awards-list-item">
-						<img src="http://baltimorecountymd.gov/sebin/n/b/footer-map-digital-counties.jpg" alt="Image of Digital Counties Survey logo." />
+						<a href="http://www.govtech.com/dc/digital-counties/?year=2014" title="Learn more about Baltimore County's Digital Counties Survey Award."><img src="http://baltimorecountymd.gov/sebin/n/b/footer-map-digital-counties.jpg" alt="Image of Digital Counties Survey logo." />
 					</li>
 					<li class="county-awards-list-item">
 						<img src="http://baltimorecountymd.gov/sebin/l/i/footer-map-botw.jpg" alt="Image of Best of The Web logo." />
