added placeholder div and text for alert

--- a/index-alert.html
+++ b/index-alert.html
@@ -89,6 +89,9 @@
 		</header>
 		<div class="promotions-container">
 			<div class="search">
+				<div class="alert">
+					<h1><a title="Read more about the public safety building closure." href="http://www.baltimorecountymd.gov/News/weather/index.html">Public Safety Building Closed for Police Nonessential Personnel, Wednesday, February 18</a></h1>
+				</div>
 			  <div class="search-input-container">
 			    <button>Search</button>
 			    <div class="search-text">
