Added hash tag to make links valid

--- a/index.html
+++ b/index.html
@@ -317,16 +317,16 @@
 			<nav class="county-links eight columns">
 				<ul class="county-links-list inline-list">
 					<li class="county-links-list-item">
-						<a href="">Contact Baltimore County</a>
+						<a href="#">Contact Baltimore County</a>
 					</li>
 					<li class="county-links-list-item">
-						<a href="">User Terms</a>
+						<a href="#">User Terms</a>
 					</li>
 					<li class="county-links-list-item">
-						<a href="">Privacy</a>
+						<a href="#">Privacy</a>
 					</li>
 					<li class="county-links-list-item">
-						<a href="">Jobs</a>
+						<a href="#">Jobs</a>
 					</li>
 				</ul>
 			</nav>
