--- a/index-alert.html
+++ b/index-alert.html
@@ -49,7 +49,7 @@
 					</li>
 				</ul>
 				<div class="page-tools four columns">
-					<a href="#" class="subscribe" title="Subscribe to Baltimore County Newsletters">Subscribe</a>
+					<a href="http://www.baltimorecountymd.gov/Subscribe/" class="subscribe" title="Subscribe to Baltimore County Newsletters.">Subscribe</a>
 					<div class="resizer">
 					  <ul class="resizer-list inline-list">
 					    <li><a id="decrease-text" href="#" class="resizer-item resizer-item-smaller">a</a></li>
