Added href to brand logo in header

--- a/index-alert.html
+++ b/index-alert.html
@@ -63,8 +63,10 @@
 			<div class="primary-header">
 			  <div class="container">
 			    <div class="brand">
+			      <a href="http://www.baltimorecountymd.gov" title="View the Baltimore County Government homepage.">
 			      <img class="brand-logo" src="assets/img/header-county-seal.png" height="84" width="84" />
 			      <h1 class="brand-heading">Baltimore County<br><span class="uppercase smaller-text">Government</span></h1>
+			  	</a>
 			    </div>
 			    <ul class="primary-nav" role="navigation">
 			      <li class="primary-nav-item">
