Added inline list to most popular services element

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			  </div>
 			  <div class="top-visited">
 			    <span class="top-visited-label">Top Visited</span>
-			    <ul class="top-visited-list">
+			    <ul class="inline-list top-visited-list">
 			      <li><a href="http://www.baltimorecountymd.gov/Agencies/humanresources/jobs/index.html" title="View job listings.">Jobs</a></li>
 			      <li><a href="http://www.baltimorecountymd.gov/Agencies/budfin/taxsearch/index.html" title="Pay or search property taxes online.">Pay Property Tax</a></li>
 			      <li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/solid_waste/collectionconnection.html" title="Find information about trash and recycling.">Trash and Recycling</a></li>
