Changed text resizers anchors to buttons
Did this to utilize the disabled attribute

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 					<a href="http://www.baltimorecountymd.gov/Subscribe/" class="subscribe" title="Subscribe to Baltimore County Newsletters.">Subscribe</a>
 					<div class="resizer">
 					  <ul class="resizer-list inline-list">
-					    <li><a id="decrease-text" href="#" class="resizer-item resizer-item-smaller">a</a></li>
-					    <li><a id="reset-text" href="#" class="resizer-item resizer-item-default">a</a></li>
-					    <li><a id="increase-text" href="#" class="resizer-item resizer-item-larger">a</a></li>
+					    <li><button id="decrease-text" class="btn-link resizer-item resizer-item-smaller">a</button></li>
+					    <li><button id="reset-text" class="btn-link resizer-item resizer-item-default">a</button></li>
+					    <li><button id="increase-text" class="btn-link resizer-item resizer-item-larger">a</button></li>
 					  </ul>
 					</div>
 				</div>
