Reformatted the pages to deal with the alert

--- a/index-alert.html
+++ b/index-alert.html
@@ -91,29 +91,30 @@
 		</header>
 		<div class="promotions-container">
 			
-
-			<div class="search">
+			<div class="search-container">
 				<div class="alert">
-					<h1><a title="Read more about the public safety building closure." href="http://www.baltimorecountymd.gov/News/weather/index.html">Public Safety Building Closed for Police Nonessential Personnel, Wednesday, February 18</a></h1>
+						<h1><a title="Read more about the public safety building closure." href="http://www.baltimorecountymd.gov/News/weather/index.html">Public Safety Building Closed for Police Nonessential Personnel, Wednesday, February 18</a></h1>
 				</div>
-			  <div class="search-input-container">
-			    <button>Search</button>
-			    <div class="search-text">
-			      <input type="text" class="search-input" placeholder="Search for agencies, services and more..." />
-			    </div>
-			    <div class="clearfix"></div>
-			  </div>
-			  <div class="top-visited">
-			    <span class="top-visited-label">Top Visited</span>
-			    <ul class="top-visited-list">
-			      <li><a href="http://www.baltimorecountymd.gov/Agencies/humanresources/jobs/index.html" title="View job listings.">Jobs</a></li>
-			      <li><a href="http://www.baltimorecountymd.gov/Agencies/budfin/taxsearch/index.html" title="Pay or search property taxes online.">Pay Property Tax</a></li>
-			      <li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/solid_waste/collectionconnection.html" title="Find information about trash and recycling.">Trash and Recycling</a></li>
-			      <li><a href="http://www.baltimorecountymd.gov/Agencies/circuit/jurycomm.html" title="Get information about jury duty and fill out the jury questionnaire.">Jury Duty</a></li>
-			      <li><a href="http://www.baltimorecountymd.gov/Agencies/budfin/citations/index.html" title="Pay parking and red light citations.">Pay Parking and Red Light Citations</a></li>
-			    </ul>
-			    <div class="clearfix"></div>
-			  </div>
+				<div class="search">
+				  <div class="search-input-container">
+				    <button>Search</button>
+				    <div class="search-text">
+				      <input type="text" class="search-input" placeholder="Search for agencies, services and more..." />
+				    </div>
+				    <div class="clearfix"></div>
+				  </div>
+				  <div class="top-visited">
+				    <span class="top-visited-label">Top Visited</span>
+				    <ul class="inline-list top-visited-list">
+				      <li><a href="http://www.baltimorecountymd.gov/Agencies/humanresources/jobs/index.html" title="View job listings.">Jobs</a></li>
+				      <li><a href="http://www.baltimorecountymd.gov/Agencies/budfin/taxsearch/index.html" title="Pay or search property taxes online.">Pay Property Tax</a></li>
+				      <li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/solid_waste/collectionconnection.html" title="Find information about trash and recycling.">Trash and Recycling</a></li>
+				      <li><a href="http://www.baltimorecountymd.gov/Agencies/circuit/jurycomm.html" title="Get information about jury duty and fill out the jury questionnaire.">Jury Duty</a></li>
+				      <li><a href="http://www.baltimorecountymd.gov/Agencies/budfin/citations/index.html" title="Pay parking and red light citations.">Pay Parking and Red Light Citations</a></li>
+				    </ul>
+				    <div class="clearfix"></div>
+				  </div>
+				</div>
 			</div>
 			<section class="carousel-container container">
 				<div class="carousel">
