--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 			</div>
 		</header>
 		<div class="promotions-container">
+			<div class="search-container">
 			<div class="search">
 			  <div class="search-input-container">
 			    <button>Search</button>
@@ -109,6 +110,7 @@
 			    </ul>
 			    <div class="clearfix"></div>
 			  </div>
+			</div>
 			</div>
 			<section class="carousel-container container">
 				<div class="carousel">
