--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 		<script type="text/javascript" src="assets/js/lib/slick.min.js"></script>
 		<script type="text/javascript" src="assets/js/lib/handlebars.js"></script>
 		<script src="assets/js/template.js"></script>
+		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	    <!--[if lt IE 9]>
+	      <script src="assets/js/lib/html5shiv.min.js"></script>
+	      <script src="assets/js/lib/respond.min.js"></script>
+	    <![endif]-->
+
 	</head>
 	<body class="homepage">
 		<header class="header">
