Added conditional link to our ie style sheet

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Baltimore County Homepage Government</title>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css"/>
+		<!--[if lt IE 9]>
+			<link rel="stylesheet" type="text/css" href="assets/stylesheets/ie.css"/>
+		<![endif]-->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script type="text/javascript" src="assets/js/lib/slick.min.js"></script>
 		<script type="text/javascript" src="assets/js/lib/handlebars.js"></script>
