Updated class names for the text resizer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script type="text/javascript" src="assets/js/lib/slick.min.js"></script>
 		<script type="text/javascript" src="assets/js/lib/handlebars.js"></script>
+		<script src="assets/js/text-resizer.js"></script>
 		<script src="assets/js/template.js"></script>
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -64,9 +65,9 @@
 					<a href="http://www.baltimorecountymd.gov/Subscribe/" class="subscribe" title="Subscribe to Baltimore County Newsletters.">Subscribe</a>
 					<div class="resizer">
 					  <ul class="resizer-list inline-list">
-					    <li><button id="decrease-text" class="btn-link resizer-item resizer-item-smaller">a</button></li>
-					    <li><button id="reset-text" class="btn-link resizer-item resizer-item-default">a</button></li>
-					    <li><button id="increase-text" class="btn-link resizer-item resizer-item-larger">a</button></li>
+					    <li><button id="normal-text" class="btn-link resizer-item resizer-item-smaller">a</button></li>
+					    <li><button id="large-text" class="btn-link resizer-item resizer-item-default">a</button></li>
+					    <li><button id="largest-text" class="btn-link resizer-item resizer-item-larger">a</button></li>
 					  </ul>
 					</div>
 				</div>
