--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<header class="header">
 			<section class="secondary-nav">
 				<div class="container">
-				<nav class="five columns">
+				<nav class="col-md-4">
 					<ul class="secondary-nav-list inline-list">
 						<li class="secondary-nav-list-item">
 							<a href="">County Executive</a>
@@ -39,7 +39,7 @@
 						</li>
 					</ul>
 				</nav>
-				<ul class="social-media-list social-media-list-small inline-list seven columns">
+				<ul class="social-media-list social-media-list-small inline-list col-md-4">
 					<li class="social-media-list-item social-media-list-item-facebook">
 						<a href="">
 						</a>
@@ -61,7 +61,7 @@
 						</a>
 					</li>
 				</ul>
-				<div class="page-tools four columns">
+				<div class="page-tools col-md-4">
 					<a href="http://www.baltimorecountymd.gov/Subscribe/" class="subscribe" title="Subscribe to Baltimore County Newsletters.">Subscribe</a>
 					<div class="resizer">
 					  <ul class="resizer-list inline-list">
@@ -75,24 +75,24 @@
 			</section>
 			<div class="primary-header">
 			  <div class="container">
-			    <div class="brand">
+			    <div class="brand col-md-4">
 			      <a href="http://www.baltimorecountymd.gov" title="View the Baltimore County Government homepage.">
 			      <img class="brand-logo" src="assets/img/header-county-seal.png" height="84" width="84" />
 			      <h1 class="brand-heading">Baltimore County<br><span class="uppercase smaller-text">Government</span></h1>
 			  	</a>
 			    </div>
-			    <ul class="primary-nav" role="navigation">
-			      <li class="primary-nav-item">
+			    <ul class="primary-nav col-md-8" role="navigation">
+			      <li class="primary-nav-item col-md-4">
 			        <h2 class="primary-nav-item__headline">
 			          <a href="http://www.baltimorecountymd.gov/iwant/apply.html">I Want To...<br><span class="primary-nav-item__tagline">Report Issues, Follow Up, Apply</span></a>
 			        </h2>
 			      </li>
-			      <li class="primary-nav-item">
+			      <li class="primary-nav-item col-md-4">
 			        <h2 class="primary-nav-item__headline">
 			          <a href="http://www.baltimorecountymd.gov/iwant/apply.html">I'm Looking For...<br><span class="primary-nav-item__tagline">Resident, Visitor, or Business Info</span></a>
 			        </h2>
 			      </li>
-			      <li class="primary-nav-item">
+			      <li class="primary-nav-item col-md-4">
 			        <h2 class="primary-nav-item__headline">
 			          <a href="http://www.baltimorecountymd.gov/iwant/apply.html">I Need to Contact...<br><span class="primary-nav-item__tagline">An Agency, My Rep, An Employee</span></a>
 			        </h2>
@@ -177,7 +177,7 @@
 		<div id="main-content" class="county-information">
 		<div class="county-information-container container">
 		
-		<section class="news-feed ten columns">
+		<section class="news-feed col-md-7">
 			<h2>Baltimore County Now</h2>
 			<div class="county-photo-feed"></div><!--flickr feed -->
 			<div class="SESyndicationModule">
@@ -230,8 +230,8 @@
   			<div class="clearfix">&nbsp;</div>
 			<a href="http://www.baltimorecountymd.gov/News/BaltimoreCountyNow" title="Read more from Baltimore County Now." class="news-feed-read-more">Read More From Baltimore County Now</a>
 		</section>
-		<section class="elected-officials six columns">
-			<section class="county-executive">
+		<section class="elected-officials col-md-5">
+			<section class="county-executive col-md-12 col-sm-6 col-xs-12">
 				<h2>County Executive</h2>
 				<img src="assets/img/county-executive.jpg" alt="Kevin Kamenetz, Baltimore County's County Executive" />
 				<ul class="social-media-list social-media-list-gold social-media-list-small inline-list">
@@ -265,7 +265,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="county-council">
+			<section class="county-council col-md-12 col-sm-6">
 				<h2>County Council</h2>
 				<img src="assets/img/county-council.jpg" alt="Kevin Kamenetz, Baltimore County's County Executive" />
 				<a title="Find your representative." href="http://egov2.baltimorecountymd.gov/votingweb/Address.aspx?pageid=3">Who is my Representative?</a>
@@ -276,7 +276,7 @@
 		
 		<footer class="footer">
 			<section class="primary-footer container">
-			<section class="county-map-container seven columns">
+			<section class="county-map-container col-md-6">
 				<img src="assets/img/footer-county-shape.png" alt="" class="county-map">
 				<div class="county-address">
 					<h2>Baltimore County Government</h2>
@@ -287,7 +287,7 @@
 				</div>
 				
 			</section>
-			<section class="county-help three columns">
+			<section class="county-help col-md-2">
 				<h2>Help</h2>
 				<ul class="county-help-list">
 					<li class="county-help-list-item">
@@ -301,7 +301,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="tranlate-page three columns">
+			<section class="tranlate-page col-md-2">
 				<h2>Translate</h2>
 				<ul class="translate-page-list">
 					<li class="american"><a title="English" href="http://baltimorecountymd.gov//">English</a></li>
@@ -322,7 +322,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="county-awards three columns">
+			<section class="county-awards col-md-2">
 				<h2>Awards</h2>
 				<ul class="county-awards-list">
 					<li class="county-awards-list-item">
@@ -336,10 +336,10 @@
 		</section>
 		<section class="secondary-footer">
 			<div class="container">
-			<section class="copyright seven columns">
+			<section class="copyright col-md-4">
 				<span>&copy; Copyright 2015 Baltimore County Government</span>
 			</section>
-			<nav class="county-links nine columns">
+			<nav class="county-links col-md-8">
 				<ul class="county-links-list inline-list">
 					<li class="county-links-list-item">
 						<a href="http://www.baltimorecountymd.gov/Contact/webmaster?issueid=42" title="Contact Baltimore County.">Contact Baltimore County</a>
