--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<header class="header">
 			<section class="secondary-nav">
 				<div class="container">
-				<nav class="col-md-4">
+				<nav class="col-md-4 col-sm-6">
 					<ul class="secondary-nav-list inline-list">
 						<li class="secondary-nav-list-item">
 							<a href="">County Executive</a>
@@ -39,7 +39,7 @@
 						</li>
 					</ul>
 				</nav>
-				<ul class="social-media-list social-media-list-small inline-list col-md-4">
+				<ul class="social-media-list social-media-list-small inline-list col-md-4 hidden-sm hidden-xs">
 					<li class="social-media-list-item social-media-list-item-facebook">
 						<a href="">
 						</a>
@@ -61,7 +61,7 @@
 						</a>
 					</li>
 				</ul>
-				<div class="page-tools col-md-4">
+				<div class="page-tools col-md-4 col-sm-6">
 					<a href="http://www.baltimorecountymd.gov/Subscribe/" class="subscribe" title="Subscribe to Baltimore County Newsletters.">Subscribe</a>
 					<div class="resizer">
 					  <ul class="resizer-list inline-list">
@@ -276,7 +276,7 @@
 		
 		<footer class="footer">
 			<section class="primary-footer container">
-			<section class="county-map-container col-md-6">
+			<section class="county-map-container col-md-6 col-sm-6">
 				<img src="assets/img/footer-county-shape.png" alt="" class="county-map">
 				<div class="county-address">
 					<h2>Baltimore County Government</h2>
@@ -287,7 +287,7 @@
 				</div>
 				
 			</section>
-			<section class="county-help col-md-2">
+			<section class="county-help col-md-2 col-sm-6">
 				<h2>Help</h2>
 				<ul class="county-help-list">
 					<li class="county-help-list-item">
@@ -301,7 +301,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="tranlate-page col-md-2">
+			<section class="tranlate-page col-md-2 col-sm-6">
 				<h2>Translate</h2>
 				<ul class="translate-page-list">
 					<li class="american"><a title="English" href="http://baltimorecountymd.gov//">English</a></li>
@@ -322,7 +322,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="county-awards col-md-2">
+			<section class="county-awards col-md-2 col-sm-6">
 				<h2>Awards</h2>
 				<ul class="county-awards-list">
 					<li class="county-awards-list-item">
@@ -333,13 +333,35 @@
 					</li>
 				</ul>
 			</section>
+			<ul class="social-media-list social-media-list-small inline-list col-md-12 hidden-md">
+					<li class="social-media-list-item social-media-list-item-facebook">
+						<a href="">
+						</a>
+					</li>
+					<li class="social-media-list-item social-media-list-item-twitter">
+						<a href="">
+						</a>
+					</li>
+					<li class="social-media-list-item social-media-list-item-photos">
+						<a href="">
+						</a>
+					</li>
+					<li class="social-media-list-item social-media-list-item-youtube">
+						<a href="">
+						</a>
+					</li>
+					<li class="social-media-list-item social-media-list-item-bcnow">
+						<a href="">
+						</a>
+					</li>
+				</ul>
 		</section>
 		<section class="secondary-footer">
 			<div class="container">
-			<section class="copyright col-md-4">
+			<section class="copyright col-md-4 col-sm-12">
 				<span>&copy; Copyright 2015 Baltimore County Government</span>
 			</section>
-			<nav class="county-links col-md-8">
+			<nav class="county-links col-md-8 col-sm-12">
 				<ul class="county-links-list inline-list">
 					<li class="county-links-list-item">
 						<a href="http://www.baltimorecountymd.gov/Contact/webmaster?issueid=42" title="Contact Baltimore County.">Contact Baltimore County</a>
