Added classes for tablet to primary nav

--- a/index.html
+++ b/index.html
@@ -75,24 +75,24 @@
 			</section>
 			<div class="primary-header">
 			  <div class="container">
-			    <div class="brand col-md-4">
+			    <div class="brand col-md-4 col-sm-12">
 			      <a href="http://www.baltimorecountymd.gov" title="View the Baltimore County Government homepage.">
 			      <img class="brand-logo" src="assets/img/header-county-seal.png" height="84" width="84" />
 			      <h1 class="brand-heading">Baltimore County<br><span class="uppercase smaller-text">Government</span></h1>
 			  	</a>
 			    </div>
-			    <ul class="primary-nav col-md-8" role="navigation">
-			      <li class="primary-nav-item col-md-4">
+			    <ul class="primary-nav col-md-8 col-sm-12" role="navigation">
+			      <li class="primary-nav-item col-md-4 col-sm-4">
 			        <h2 class="primary-nav-item__headline">
 			          <a href="http://www.baltimorecountymd.gov/iwant/apply.html">I Want To...<br><span class="primary-nav-item__tagline">Report Issues, Follow Up, Apply</span></a>
 			        </h2>
 			      </li>
-			      <li class="primary-nav-item col-md-4">
+			      <li class="primary-nav-item col-md-4 col-sm-4">
 			        <h2 class="primary-nav-item__headline">
 			          <a href="http://www.baltimorecountymd.gov/iwant/apply.html">I'm Looking For...<br><span class="primary-nav-item__tagline">Resident, Visitor, or Business Info</span></a>
 			        </h2>
 			      </li>
-			      <li class="primary-nav-item col-md-4">
+			      <li class="primary-nav-item col-md-4 col-sm-4">
 			        <h2 class="primary-nav-item__headline">
 			          <a href="http://www.baltimorecountymd.gov/iwant/apply.html">I Need to Contact...<br><span class="primary-nav-item__tagline">An Agency, My Rep, An Employee</span></a>
 			        </h2>
