Adjusted social icons for different screens

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 		<footer class="footer">
 			<section class="primary-footer container">
 			<section class="county-map-container col-md-6 col-sm-6">
-				<img src="assets/img/footer-county-shape.png" alt="" class="county-map">
+				<img src="assets/img/footer-county-shape.png" alt="" class="county-map hidden-sm hidden-xs">
 				<div class="county-address">
 					<h2>Baltimore County Government</h2>
 					<p>Historic Courthouse</br>
@@ -301,7 +301,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="tranlate-page col-md-2 col-sm-6">
+			<section class="tranlate-page col-md-2 hidden-sm hidden-xs">
 				<h2>Translate</h2>
 				<ul class="translate-page-list">
 					<li class="american"><a title="English" href="http://baltimorecountymd.gov//">English</a></li>
@@ -322,7 +322,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="county-awards col-md-2 col-sm-6">
+			<section class="county-awards col-md-2 hidden-sm hidden-xs">
 				<h2>Awards</h2>
 				<ul class="county-awards-list">
 					<li class="county-awards-list-item">
@@ -333,7 +333,7 @@
 					</li>
 				</ul>
 			</section>
-			<ul class="social-media-list social-media-list-small inline-list col-md-12 hidden-md">
+			<ul class="social-media-list social-media-list-small inline-list col-sm-12 hidden-md hidden-lg">
 					<li class="social-media-list-item social-media-list-item-facebook">
 						<a href="">
 						</a>
