Updated County Infomation to match psd

--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
 		<div id="main-content" class="county-information">
 		<div class="county-information-container container">
 		
-		<section class="news-feed col-md-7">
-			<h2>Baltimore County Now</h2>
-			<div class="county-photo-feed"></div><!--flickr feed -->
+		<section class="news-feed col-md-8">
+			<h2 class="county-information-headline">Baltimore County Now</h2>
+			<div class="county-photo-feed col-md-12 clearfix"></div><!--flickr feed -->
 			<div class="SESyndicationModule">
   <div class="feedDetails">
   	
@@ -230,7 +230,7 @@
   			<div class="clearfix">&nbsp;</div>
 			<a href="http://www.baltimorecountymd.gov/News/BaltimoreCountyNow" title="Read more from Baltimore County Now." class="news-feed-read-more">Read More From Baltimore County Now</a>
 		</section>
-		<section class="elected-officials col-md-5">
+		<section class="elected-officials col-md-4">
 			<section class="county-executive col-md-12 col-sm-6 col-xs-12">
 				<h2>County Executive</h2>
 				<img src="assets/img/county-executive.jpg" alt="Kevin Kamenetz, Baltimore County's County Executive" />
