Fixed classes for primary nav

--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
 			  	</a>
 			    </div>
 			    <ul class="primary-nav col-md-8 col-sm-12" role="navigation">
-			      <li class="primary-nav-item col-md-4 col-sm-4">
+			      <li class="primary-nav-item col-md-4 col-sm-4 col-xs-12">
 			        <h2 class="primary-nav-item__headline">
 			          <a href="http://www.baltimorecountymd.gov/iwant/apply.html">I Want To...<br><span class="primary-nav-item__tagline">Report Issues, Follow Up, Apply</span></a>
 			        </h2>
 			      </li>
-			      <li class="primary-nav-item col-md-4 col-sm-4">
+			      <li class="primary-nav-item col-md-4 col-sm-4 col-xs-12">
 			        <h2 class="primary-nav-item__headline">
 			          <a href="http://www.baltimorecountymd.gov/iwant/apply.html">I'm Looking For...<br><span class="primary-nav-item__tagline">Resident, Visitor, or Business Info</span></a>
 			        </h2>
 			      </li>
-			      <li class="primary-nav-item col-md-4 col-sm-4">
+			      <li class="primary-nav-item col-md-4 col-sm-4 col-xs-12">
 			        <h2 class="primary-nav-item__headline">
 			          <a href="http://www.baltimorecountymd.gov/iwant/apply.html">I Need to Contact...<br><span class="primary-nav-item__tagline">An Agency, My Rep, An Employee</span></a>
 			        </h2>
@@ -230,7 +230,7 @@
   			<div class="clearfix">&nbsp;</div>
 			<a href="http://www.baltimorecountymd.gov/News/BaltimoreCountyNow" title="Read more from Baltimore County Now." class="news-feed-read-more">Read More From Baltimore County Now</a>
 		</section>
-		<section class="elected-officials col-md-4">
+		<section class="elected-officials col-md-4 hidden-xs">
 			<section class="county-executive col-md-12 col-sm-6 col-xs-12">
 				<h2>County Executive</h2>
 				<img src="assets/img/county-executive.jpg" alt="Kevin Kamenetz, Baltimore County's County Executive" />
