--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 	</head>
 	<body class="homepage">
 		<header class="header">
-			<section class="secondary-nav">
+			<section class="secondary-nav hidden-xs">
 				<div class="container">
-				<nav class="col-md-4 col-sm-6">
+				<nav class="col-md-4 col-sm-6 ">
 					<ul class="secondary-nav-list inline-list">
 						<li class="secondary-nav-list-item">
 							<a href="">County Executive</a>
@@ -61,7 +61,7 @@
 						</a>
 					</li>
 				</ul>
-				<div class="page-tools col-md-4 col-sm-6">
+				<div class="page-tools col-md-4 col-sm-6 hidden-xs">
 					<a href="http://www.baltimorecountymd.gov/Subscribe/" class="subscribe" title="Subscribe to Baltimore County Newsletters.">Subscribe</a>
 					<div class="resizer">
 					  <ul class="resizer-list inline-list">
@@ -81,6 +81,19 @@
 			      <h1 class="brand-heading">Baltimore County<br><span class="uppercase smaller-text">Government</span></h1>
 			  	</a>
 			    </div>
+			    <nav class="secondary-nav col-xs-12 hidden-lg hidden-md hidden-sm">
+					<ul class="secondary-nav-list inline-list">
+						<li class="secondary-nav-list-item">
+							<a href="">County Executive</a>
+						</li>
+						<li class="secondary-nav-list-item">
+							<a href="">County Council</a>
+						</li>
+						<li class="secondary-nav-list-item">
+							<a href="">Courts</a>
+						</li>
+					</ul>
+				</nav>
 			    <ul class="primary-nav col-md-8 col-sm-12" role="navigation">
 			      <li class="primary-nav-item col-md-4 col-sm-4 col-xs-12">
 			        <h2 class="primary-nav-item__headline">
