Added Hamburger Menu

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 						</li>
 					</ul>
 				</nav>
+				<div class="primary-nav-container">
 			    <ul class="primary-nav col-md-8 col-sm-12" role="navigation">
 			      <li class="primary-nav-item col-md-4 col-sm-4 col-xs-12">
 			        <h2 class="primary-nav-item__headline">
@@ -111,7 +112,13 @@
 			        </h2>
 			      </li>
 			    </ul>
+			    <nav class="hamburger-nav">
+			    	<a class="hamburger-btn" href="#" title="Navigate Baltimore County's Website">
+			    		<img src="assets/img/hamburger.png" height="32" width="32" alt="Navigate Baltimore County's Website" /></a>
+			    </nav>
+			    </div>
 			    <div class="clearfix"></div>
+
 			  </div>
 			</div>
 		</header>
@@ -246,7 +253,7 @@
 		<section class="elected-officials col-md-4 hidden-xs">
 			<section class="county-executive col-md-12 col-sm-6 col-xs-12">
 				<h2>County Executive</h2>
-				<img src="assets/img/county-executive.jpg" alt="Kevin Kamenetz, Baltimore County's County Executive" />
+					<a href="" title=""><img src="assets/img/county-executive.jpg" alt="Kevin Kamenetz, Baltimore County's County Executive" /></a>
 				<ul class="social-media-list social-media-list-gold social-media-list-small inline-list">
 					<li class="social-media-list-item social-media-list-item-facebook">
 						<a href="">
@@ -280,7 +287,7 @@
 			</section>
 			<section class="county-council col-md-12 col-sm-6">
 				<h2>County Council</h2>
-				<img src="assets/img/county-council.jpg" alt="Kevin Kamenetz, Baltimore County's County Executive" />
+				<a href="" title=""><img src="assets/img/county-council.jpg" alt="Kevin Kamenetz, Baltimore County's County Executive" /></a>
 				<a title="Find your representative." href="http://egov2.baltimorecountymd.gov/votingweb/Address.aspx?pageid=3">Who is my Representative?</a>
 			</section>
 		</section>
