Updated containers to containers to be fluid
set max width of 1200px to match psd

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				</div>
 			</section>
 			<div class="primary-header">
-			  <div class="container">
+			  <div class="container-fluid">
 			    <div class="brand col-md-4 col-sm-12">
 			      <a href="http://www.baltimorecountymd.gov" title="View the Baltimore County Government homepage.">
 			      <img class="brand-logo" src="assets/img/header-county-seal.png" height="84" width="84" />
@@ -145,7 +145,7 @@
 			  </div>
 			</div>
 			</div>
-			<section class="carousel-container container">
+			<section class="carousel-container container-fluid">
 				<div class="carousel">
 					<div class="promotions">
 					  <div class="promotions-item">
@@ -195,7 +195,7 @@
 			</section>
 		</div>
 		<div id="main-content" class="county-information">
-		<div class="county-information-container container">
+		<div class="county-information-container container-fluid">
 		
 		<section class="news-feed col-md-8">
 			<h2 class="county-information-headline">Baltimore County Now</h2>
