Added search label for accessability

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 			  <div class="search-input-container">
 			    <button>Search</button>
 			    <div class="search-text">
-			      <input type="text" class="search-input" placeholder="Search for agencies, services and more..." />
+			      <label class="search-label" for="search-input">Search</label><input type="text" class="search-input" name="search-input" placeholder="Search for agencies, services and more..." />
 			    </div>
 			    <div class="clearfix"></div>
 			  </div>
