--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
 	</head>
 	<body class="homepage">
+		<div id="skiptocontent" class="skip-nav">
+		  <a href="#main-content" class="link-btn skip">skip to main content</a>
+		</div>
 		<header class="header">
 			<section class="secondary-nav hidden-xs">
 				<div class="container">
