Referenced skipnav jquery fallback

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<script src="assets/js/lib/reView.js"></script>
 		<script src="assets/js/text-resizer.js"></script>
 		<script src="assets/js/flickr.js"></script>
+		<script src="assets/js/skipNav.js"></script>
 		<script src="assets/js/template.js"></script>
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
