Removed clearfix on photo feed

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 		
 		<section class="news-feed col-md-8">
 			<h2 class="county-information-headline">Baltimore County Now</h2>
-			<div class="county-photo-feed col-md-12 clearfix"></div><!--flickr feed -->
+			<div class="county-photo-feed col-md-12"></div><!--flickr feed -->
 			<div class="SESyndicationModule">
   <div class="feedDetails">
   	
