Updated search input to type search

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			  <div class="search-input-container">
 			    <button>Search</button>
 			    <div class="search-text">
-			      <label class="search-label" for="search-input">Search</label><input type="text" class="search-input" name="search-input" placeholder="Search for agencies, services and more..." />
+			      <label class="search-label" for="search-input">Search</label><input type="search" class="search-input" name="search-input" placeholder="Search for agencies, services and more..." />
 			    </div>
 			  </div>
 			  <div class="top-visited">
@@ -153,42 +153,42 @@
 				<div class="carousel">
 					<div class="promotions">
 					  <div class="promotions-item">
-					    <img class="promotion-image" src="assets/img/carousel-petadoption.jpg" />
+					    <img class="promotion-image" src="assets/img/carousel-petadoption-small.jpg" srcset="assets/img/carousel-petadoption.jpg 767w" />
 					    <div class="promotions-message">
 					      <h2>Adopt a lost or adoptable pet</h2>
 					      <p>Adopt a pet now and you will get another one <a href="#" title="Get a free pet">free</a>.</p>
 					    </div>
 					  </div>
 					  <div class="promotions-item">
-					    <img class="promotion-image" src="assets/img/carousel-walkingtrails.jpg" />
+					    <img class="promotion-image" src="assets/img/carousel-walkingtrails-reallysmall.jpg" srcset="assets/img/carousel-walkingtrails.jpg 767w"/>
 					    <div class="promotions-message">
 					      <h2>Walking Trails and Paths</h2>
 					      <p>Use our <a href="#" title="Follow Snowfighter">online search tool</a> to find walking trails and paths throughout Baltimore County.</p>
 					    </div>
 					  </div>
 					  <div class="promotions-item">
-					    <img class="promotion-image" src="assets/img/carousel-snowfighter.jpg" />
+					    <img class="promotion-image" src="assets/img/carousel-snowfighter.jpg" srcset="assets/img/carousel-snowfighter-small.jpg 767w" />
 					    <div class="promotions-message">
 					      <h2>Follow Snowfighter</h2>
 					      <p>For your latest storm updates, <a href="#" title="Follow Snowfighter">follow snowfighter</a>.</p>
 					    </div>
 					  </div>
 					  <div class="promotions-item">
-					    <img class="promotion-image" src="assets/img/carousel-walksafe.jpg" />
+					    <img class="promotion-image" src="assets/img/carousel-walksafe.jpg" srcset="assets/img/carousel-walksafe-small.jpg 767w" />
 					    <div class="promotions-message">
 					      <h2>Walk safe to your next destination</h2>
 					      <p>Make sure to follow crosswalks to ensure your safety, find out <a href="#" title="Find out more about walking safe">more information</a> about walking safe.</p>
 					    </div>
 					  </div>
 					  <div class="promotions-item">
-					    <img class="promotion-image" src="assets/img/carousel-stormwater.jpg" />
+					    <img class="promotion-image" src="assets/img/carousel-stormwater.jpg" srcset="assets/img/carousel-stormwater-small.jpg 767w" />
 					    <div class="promotions-message">
 					      <h2>Question about Stormwater?</h2>
 					      <p>Find out <a href="#" title="Find out more about walking safe">more information</a> about the baltimore county stormwater tax.</p>
 					    </div>
 					  </div>
 					  <div class="promotions-item">
-					    <img class="promotion-image" src="assets/img/carousel-bigtrees.jpg" />
+					    <img class="promotion-image" src="assets/img/carousel-bigtrees.jpg" srcset="assets/img/carousel-snowfighter-small.jpg 767w" />
 					    <div class="promotions-message">
 					      <h2>Big Trees Sale</h2>
 					      <p>Purchase trees for planting on private properties. <a href="#" title="Pre-order a big tree.">Pre-order trees</a> online today!</p>
