Renamed inside page to match it's sub template

--- a/red-inside.html
+++ b/red-inside.html
@@ -5,7 +5,11 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Baltimore County Homepage Government</title>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base-2.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/supplimental.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/inside-template.css"/>
+		
 		<!--[if lt IE 9]>
 			<link rel="stylesheet" type="text/css" href="assets/stylesheets/ie.css"/>
 		<![endif]-->
@@ -15,8 +19,8 @@
 		<script type="text/javascript" src="assets/js/lib/handlebars.js"></script>
 		<script src="assets/js/lib/reView.js"></script>
 		<script src="assets/js/text-resizer.js"></script>
-		<script src="assets/js/flickr.js"></script>
 		<script src="assets/js/skipNav.js"></script>
+		<script src="assets/js/flickr.js"></script>
 		<script src="assets/js/template.js"></script>
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -117,7 +121,8 @@
 
 		<div id="main-content" class="county-information">
 		<div class="county-information-container container-fluid">
-		
+		<div id="backgroundgradient">
+			<div id="backgroundshadow">
 				<!--SITE EXECUTIVE HTML START-->
 				<div id="maincontainer"><a name="SkipNav"></a> <div id="column1"><div class="logoboxbottom">&nbsp;</div><div id="container_localnavigation"><div id="baco_subnav"><table width="218" cellspacing="2" cellpadding="2" border="0">
 			<tbody><tr>
@@ -322,7 +327,7 @@
             return false;
         } 
 });
-</script>&nbsp;</div></div></div>
+</script>&nbsp;</div></div></div></div></div>
 
 				<!--SITE EXECUTIVE HTML END-->
 		</div>
