--- a/red-inside.html
+++ b/red-inside.html
@@ -7,6 +7,7 @@
 		<title>Baltimore County Homepage Government</title>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base-2.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/main-content.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/red-inside.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/inside-template.css"/>
 
