Updating changes on calendar to match main site

--- a/red-inside-calendar.html
+++ b/red-inside-calendar.html
@@ -5,9 +5,11 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Baltimore County Homepage Government</title>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-content.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/red-inside.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/red-inside-calendar.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-print.css"/> -->
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base-2.css"/>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/supplimental.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/inside-template.css"/>
 		
 		<!--[if lt IE 9]>
@@ -134,7 +136,7 @@
 <script defer="true" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e80a2a60c8146f0" type="text/javascript"></script>
 <!-- AddThis Button END --></div><div id="printpagebutton"><div>
 			
-				<a onclick="openFriendlyVersion(); return false;" href="" style="cursor: pointer;"><img width="59" border="0" height="20" title="Print this page." alt="Print this page." src="/sebin/w/w/print-button.gif"></a>
+				<a onclick="openFriendlyVersion(); return false;" href="" style="cursor: pointer;"><img width="59" border="0" height="20" title="Print this page." alt="Print this page." src="http://baltimorecountymd.gov/sebin/w/w/print-button.gif"></a>
 				
 		</div></div></div></div><div id="graybartop">&nbsp;</div><div id="baco_breadcrumb"><span class=""><a href="http://www.baltimorecountymd.gov/" class="" title="Home">Home</a>&nbsp;&gt;&nbsp;Calendars of Events&nbsp;&gt;&nbsp;<a href="/MeetingsandEvents/countywide" class="" title="Countywide">Countywide</a></span></div><div></div><div id="mainContent"><noscript> &lt;h1&gt;Javascript Is Disabled On Your Browser&lt;/h1&gt;
 &lt;p&gt;It appears that your browser does not support JavaScript, or you have it disabled. This site is best viewed with JavaScript enabled.  If JavaScript is disabled in your browser, please turn it back on then reload this page.&lt;/p&gt;
@@ -811,7 +813,7 @@
             return false;
         } 
 });
-</script>&nbsp;</div></div></div>
+</script>&nbsp;</div></div></div></div></div>
 
 				<!--SITE EXECUTIVE HTML END-->
 		</div>
