--- a/red-inside-csp.html
+++ b/red-inside-csp.html
@@ -5,9 +5,12 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Baltimore County Homepage Government</title>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base.css"/>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base-2.css"/>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/supplimental.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-content.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/red-inside.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/red-inside-calendar.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-print.css"/> -->
+		<!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base-2.css"/> -->
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/form.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/inside-template.css"/>
 		
 		<!--[if lt IE 9]>
@@ -50,7 +53,7 @@
 						</li>
 					</ul>
 				</nav>
-				<div class="search col-md-4">
+				<div class="search search-internal col-md-4">
 				<div class="search-input-container">
 			    <button>Search</button>
 			    <div class="search-text">
@@ -134,7 +137,7 @@
 <script defer="true" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e80a2a60c8146f0" type="text/javascript"></script>
 <!-- AddThis Button END --></div><div id="printpagebutton"><div>
 			
-				<a onclick="openFriendlyVersion(); return false;" href="" style="cursor: pointer;"><img width="59" border="0" height="20" title="Print this page." alt="Print this page." src="/sebin/w/w/print-button.gif"></a>
+				<a onclick="openFriendlyVersion(); return false;" href="" style="cursor: pointer;"><img width="59" border="0" height="20" title="Print this page." alt="Print this page." src="http://baltimorecountymd.gov/sebin/w/w/print-button.gif"></a>
 				
 		</div></div></div></div><div id="graybartop">&nbsp;</div><div id="baco_breadcrumb"><span class=""><a href="http://www.baltimorecountymd.gov/" class="">Home</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/needtocontact/" class="">I Need to Contact</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/needtocontact/highways" class="">Highways</a></span></div><div></div><div id="mainContent"><noscript> &lt;h1&gt;Javascript Is Disabled On Your Browser&lt;/h1&gt;
 &lt;p&gt;It appears that your browser does not support JavaScript, or you have it disabled. This site is best viewed with JavaScript enabled.  If JavaScript is disabled in your browser, please turn it back on then reload this page.&lt;/p&gt;
@@ -452,7 +455,7 @@
 
 				<!--SITE EXECUTIVE HTML END-->
 		</div>
-		</div>
+		</div></div></div>
 		
 		<footer class="footer">
 			<section class="primary-footer container">
