Updated the html to the proper format
Some elements were missing to ensure it looks like the psd.

--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 <body style="max-width: 800px;width: 100%;margin: 0 auto;font-size: 1.5em;">
 	<div class="container" style="background: #e0e0e0; padding: 20px;">
 		<h1 style="font-size: 1.5em;">Baltimore County Hompage Redesign</h1>
-		<p>This is a beutiful page that tells you were "stuff" is.</p>
+		<p>This is a beautiful page that tells you were "stuff" is.</p>
 		<ul>
 			<li><a href="homepage.html" title="View this page">Homepage</a></li>
 			<li><a href="homepage-alert.html" title="View this page">Homepage with an Alert</a></li>
 			<li><a href="red-inside.html" title="View this page">Generic Inside Template Template</a></li>
 			<li><a href="red-county-blog.html" title="View this page">County Blog Inside Template</a></li>
+			<li><a href="red-county-blog-video.html" title="View this page">County Blog Video Template</a></li>
 			<li><a href="red-inside-calendar.html" title="View this page">Inside Template Calendar</a></li>
 			<li><a href="red-inside-csp.html" title="View this page">Constiutent Portal</a></li>
+			<li><a href="red-inside-police.html" title="View this page">Police Inside Template</a></li>
 		</ul>
 	</div>
 </body>
