--- a/red-county-blog-video.html
+++ b/red-county-blog-video.html
@@ -5,9 +5,10 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Baltimore County Homepage Government</title>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-content.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/county-blog.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-print.css"/> -->
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base-2.css"/>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/supplimental.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/inside-template.css"/>
 		
 		<!--[if lt IE 9]>
@@ -134,9 +135,9 @@
 <script defer="true" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e80a2a60c8146f0" type="text/javascript"></script>
 <!-- AddThis Button END --></div><div id="printpagebutton"><div>
 			
-				<a onclick="openFriendlyVersion(); return false;" href="" style="cursor: pointer;"><img width="59" border="0" height="20" title="Print this page." alt="Print this page." src="/sebin/w/w/print-button.gif"></a>
+				<a onclick="openFriendlyVersion(); return false;" href="" style="cursor: pointer;"><img width="59" border="0" height="20" title="Print this page." alt="Print this page." src="http://baltimorecountymd.gov/sebin/w/w/print-button.gif"></a>
 				
-		</div></div></div></div><div id="graybartop">&nbsp;</div><div id="blogimagecontainer"><img width="710" vspace="0" border="0" hspace="0" height="120" alt="Baltimore County Now - News You Can Use" src="/sebin/t/e/BlogMastheadFINAL.jpg"></div><div id="seBlogTabsContainer"><table width="100%" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><!-- skip navigation removed from included pages --><div id="seBlogTabs"><ul><li><a href="http://www.baltimorecountymd.gov/News/BaltimoreCountyNow" title="View the Baltimore County Now Blog.">Blog</a></li><li><a href="http://www.baltimorecountymd.gov/News/newsrelease.html" title="View more Baltimore County news.">News</a></li><li><a href="http://www.baltimorecountymd.gov/videogallery" title="View Baltimore County videos." class="active">Video</a></li></ul></div></td></tr></tbody></table></div><div id="baco_breadcrumb"><span class=""><a href="http://www.baltimorecountymd.gov/" class="" title="Home">Home</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/videogallery" class="" title="Video Gallery">Video Gallery</a></span></div><div></div><div id="mainContent"><noscript> &lt;h1&gt;Javascript Is Disabled On Your Browser&lt;/h1&gt;
+		</div></div></div></div><div id="graybartop">&nbsp;</div><div id="blogimagecontainer"><img width="710" vspace="0" border="0" hspace="0" height="120" alt="Baltimore County Now - News You Can Use" src="http://baltimorecountymd.gov/sebin/t/e/BlogMastheadFINAL.jpg"></div><div id="seBlogTabsContainer"><table width="100%" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><!-- skip navigation removed from included pages --><div id="seBlogTabs"><ul><li><a href="http://www.baltimorecountymd.gov/News/BaltimoreCountyNow" title="View the Baltimore County Now Blog.">Blog</a></li><li><a href="http://www.baltimorecountymd.gov/News/newsrelease.html" title="View more Baltimore County news.">News</a></li><li><a href="http://www.baltimorecountymd.gov/videogallery" title="View Baltimore County videos." class="active">Video</a></li></ul></div></td></tr></tbody></table></div><div id="baco_breadcrumb"><span class=""><a href="http://www.baltimorecountymd.gov/" class="" title="Home">Home</a>&nbsp;&gt;&nbsp;<a href="http://www.baltimorecountymd.gov/videogallery" class="" title="Video Gallery">Video Gallery</a></span></div><div></div><div id="mainContent"><noscript> &lt;h1&gt;Javascript Is Disabled On Your Browser&lt;/h1&gt;
 &lt;p&gt;It appears that your browser does not support JavaScript, or you have it disabled. This site is best viewed with JavaScript enabled.  If JavaScript is disabled in your browser, please turn it back on then reload this page.&lt;/p&gt;
 &lt;p&gt;&lt;b&gt;If your browser does not support JavaScript, select the link below: &lt;br&gt;
   &lt;br&gt;
@@ -3030,7 +3031,7 @@ The IMAGE Center for People with Disabilities</div>
             return false;
         } 
 });
-</script>&nbsp;</div></div></div>
+</script>&nbsp;</div></div></div></div></div>
 
 				<!--SITE EXECUTIVE HTML END-->
 		</div>
