Added full width link

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<li><a href="red-inside-calendar.html" title="View this page">Inside Template Calendar</a></li>
 			<li><a href="red-inside-csp.html" title="View this page">Constiutent Portal</a></li>
 			<li><a href="red-inside-police.html" title="View this page">Police Inside Template</a></li>
+			<li><a href="red-inside-fullwidth.html" title="View this page">Road Closure Map (Full Width Template)</a></li>
 		</ul>
 	</div>
 </body>
